--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,12 +8,12 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"> <a class="nav-link" routerLinkActive = "active" [routerLink] = "['home']">Home</a> </li>
       <li class="nav-item"> <a class="nav-link" routerLinkActive = "active" [routerLink] = "['precios']">Precios</a> </li>
-      <li class="nav-item"> <a class="nav-link" routerLinkActive = "active" [routerLink] = "['protegida']">Protegida</a> </li>
+      <li class="nav-item"> <a class="nav-link" routerLinkActive = "active" [routerLink] = "['protegida']" *ngIf="auth.isAuthenticated()">Protegida</a> </li>
     </ul>
     <span class="navbar-text">
       <button type="button" *ngIf="!auth.isAuthenticated()" class="btn btn-outline-primary btn-sm" (click) = "login()">Login</button>
       <button type="button" *ngIf="auth.isAuthenticated()" class="btn btn-outline-primary btn-sm" (click) = "logout()">Logout</button>
-      <button type="button" class="btn btn-danger btn-sm">Register</button>
+      <button type="button" *ngIf="!auth.isAuthenticated()" class="btn btn-danger btn-sm">Register</button>
     </span>
   </div>
 </nav>
